<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/app_name"
            android:textSize="24sp" />

    <TextView
            android:id="@+id/about_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_app_name"
            android:text="@string/about_ver"
            android:textSize="18sp" />

    <TextView
            android:id="@+id/about_db_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/about_ver"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/about_db_ver"/>

    <TextView
            android:id="@+id/about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_db_ver"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_author"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.15" />

    <TextView
            android:id="@+id/about_dev_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="@id/about_author"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/about_author"
            android:text="@string/about_dev_text" />

    <TextView
            android:id="@+id/about_dev_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="@id/about_author"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/about_dev_text"
            android:text="@string/about_dev_val" />

    <TextView
            android:id="@+id/about_dsg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="@id/about_author"
            app:layout_constraintTop_toBottomOf="@+id/about_dev_val"
            android:layout_marginTop="12dp"
            android:text="@string/about_dsg_text"

            android:visibility="gone"/>

    <TextView
            android:id="@+id/about_dsg_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="@id/about_author"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/about_dsg_text"
            android:text="@string/about_dsg_val"

            android:visibility="gone"/>

    <TextView
            android:id="@+id/about_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/about_author"
            app:layout_constraintTop_toBottomOf="@id/about_dsg_val"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:text="@string/about_source" />

    <TextView
            android:id="@+id/about_github_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/about_author"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/about_source"
            android:layout_marginStart="24dp"
            android:text="@string/about_github_url" />

</androidx.constraintlayout.widget.ConstraintLayout>